--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -37,6 +37,7 @@ sidebar:
 
 
 <br>
+<br>
 
 ## Binary Search (이진 탐색) - 재귀적
 
@@ -69,7 +70,7 @@ sidebar:
 <br>
 
 **[ 예시 ]**  
-> 정렬된 배열에서 `x = 18`을 찾는 과정
+**`문제`** 정렬된 배열에서 `x = 18`을 찾는 과정
 
 ```
 [10 12 13 14 18 20 25 27 30 35 40 45 47]
@@ -111,8 +112,7 @@ index location(index low, index high)
 • $W(n/2)$: 재귀호출에서의 비교<br>
 • $1$: top level에서의 비교
 
-
-• $t_n = \log_2 n + 1 \quad$ 몇 개의 값을 통해 확인<br>
+👉 $t_n = \log_2 n + 1 \quad$ 몇 개의 값을 통해 확인<br>
 $t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$<br>
 $t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
 $t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$<br>
@@ -129,15 +129,15 @@ $t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
 
 
 <br>
-
+<br>
 
 ## Merge Sort (합병 정렬)
 
 **[ 예시 ]**
 
+<br>
 
 **[ 의사코드: not in-place ]**
-
 `예시 1 - mergesort`
 
 ```c
@@ -201,11 +201,10 @@ void merge (int h, int m, const keytype U[], const keytype V[], keytype S[]) {
 }
 ```
 
-
+<br>
 
 **[ 의사코드: in-place ]**
-
-`예시 1 - Mergesort 2 (in-place sort)`
+`예시 1 - Mergesort 2`
 
 ```c
 /*
@@ -265,12 +264,15 @@ void merge2(index low, index mid, index high) {
 
 ```
 
+<br>
+<br>
 
 ## Quick Sort (퀵 정렬)
 
 **[ 퀵 정렬 ]**
 > 피벗을 기준으로 나누고, 각각 정렬하는 방식
 
+<br>
 
 **[ 예시 ]**
 
@@ -284,7 +286,7 @@ void merge2(index low, index mid, index high) {
     [12 13]                         [25 27]
 ```
 
-|예시|설명|
+|배열내부|설명|
 |---|---|
 |`15 22 13 27 12 10 20 25`|처음|
 |`10 13 12 [15] 22 27 20 25`|피벗(15)을 기준으로 배열 나누기<br>• 피벗보다 작은 값은 왼쪽, 큰 값은 오른쪽|
@@ -292,37 +294,33 @@ void merge2(index low, index mid, index high) {
 |`15 22 13 27 12 10 20 25`|정렬|
 
 
-**[ 시간 복잡도 ]**
+**[ 시간 복잡도 ]**<br>
+`Partition의 시간복잡도`: 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
 
-`Partition의 시간복잡도`
-> 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
-
-
-`최악의 경우 시간 복잡도`
-> 피벗이 항상 가장 작거나, 가장 큰 값일 경우
-• 정렬이 한쪽으로만 이루어짐
+`최악의 경우 시간 복잡도`<br>
+피벗이 항상 가장 작거나, 가장 큰 값일 경우<br>
+• 정렬이 한쪽으로만 이루어짐<br>
 • 왼쪽 서브배열(0개), 오른쪽 서브배열(n-1개)
 
-• $W(n) = T(0) + T(n-1) + (n-1)$
-$T(0)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간
-$T(n)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)
-$T(n-1)$: 오른쪽 배열 정렬 시간 (피벗 제외 나머지 모두)
+• $W(n) = T(0) + T(n-1) + (n-1)$<br>
+$T(0)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간<br>
+$T(n)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)<br>
+$T(n-1)$: 오른쪽 배열 정렬 시간 (피벗 제외 나머지 모두)<br>
 $n-1$: 파티션 비용
 
-• 재귀적 방정식
+• 재귀적 방정식<br>
 $T(n) = T(n - 1) + n - 1, (for n > 0)$<br>
 $T(0) = 0$<br>
 solution: $T(n) = n(n-1)/2$ > $O(n^2)$ 시간복잡도
 
 
-
 `평균의 경우 시간 복잡도`
 > 모든 위치가 피벗이 될 확률이 동일($p = 1/n$)하다고 가정할 때, A(n)<br>
 $A(n) = \sum_{p=1}^{n} \frac{1}{n} \left[ A(p-1) + A(n-p) \right] + (n - 1)$<br>
-• 앞부분: 피벗 위치 p에 따라 양쪽 서브배열을 정렬하는 평균 시간
+• 앞부분: 피벗 위치 p에 따라 양쪽 서브배열을 정렬하는 평균 시간<br>
 • 뒤의 (n - 1)은 파티션하는 데 걸리는 시간
 
-• 근사화하면 $A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$
+• 근사화하면 $A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$<br>
 • 평균적으로 매우 효율적인 정렬 알고리즘
 
 **[ 의사코드 ]**
@@ -357,6 +355,8 @@ void partition(index low, index high, index& pivotpoint) {
 }
 ```
 
+<br>
+<br>
 
 ## Factorial
 
@@ -376,7 +376,7 @@ int fact(int n) {
 
 
 
-**[ 팩토리얼 알고리즘의 효율성 ]**
+**[ 팩토리얼 알고리즘의 효율성 ]**<br>
 **1) 곱셈 횟수를 재귀식(recurrence equation) 으로 표현**
 `재귀 방정식: 재현식`
 > $t_n = t_(n-1) + 1$<br>
@@ -384,21 +384,17 @@ int fact(int n) {
 • $1$: 최상위 수준에서의 곱셈 1회<br>
 → 함수의 값이 작은 n의 값을 이용해 큰 n의 값을 구함
 
-**초기 조건**: $t_0 = 0$ (0! = 1이므로 곱셈 없음)
-
-**n이 클 때의 $t_n$ 계산 예시**
+**초기 조건**: $t_0 = 0$ (0! = 1이므로 곱셈 없음) <br>
+**n이 클 때의 $t_n$ 계산 예시**<br>
 • `t₁ = t₀ + 1 = 0 + 1 = 1`<br>
 • `t₂ = t₁ + 1 = 1 + 1 = 2`<br>
 • `t₃ = t₂ + 1 = 2 + 1 = 3`
-
 결론: `tₙ`을 `t₀`부터 반복 계산하는 건 비효율적이다 → 
 
+<br>
 **2) 곱셈 횟수를 후보 해(candidate solution) 를 통해 구하기**
-
-
-​
-• $t_n$에 대한 명시적 표현(해)을 얻기: $t_n = t_(n-1) + 1$
-👉 귀납법으로 해를 찾는 것은 불가능하지만, 후보 해가 맞는지를 확인하는 데는 귀납법을 사용할 수 있음
+• $t_n$에 대한 명시적 표현(해)을 얻기: $t_n = t_(n-1) + 1$<br>
+👉 귀납법으로 해를 찾는 것은 불가능하지만, 후보 해가 맞는지를 확인하는 데는 귀납법을 사용할 수 있음<br>
 • 초반 몇 개 값을 확인
 
 ```c
@@ -409,12 +405,16 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 
 • 후보 해 추정: $t_n = n$
 
-**3) 후보 해의 정당성 증명**
+**3) 후보 해의 정당성 증명**<br>
 `n = 0`: $t_0 = 0$<br>
-`귀납가정(Induction Hypothesis)`: $t_n = n$
+`귀납가정(Induction Hypothesis)`: $t_n = n$<br>
 `귀납단계(Induction Step)`: $t(n+1) = n + 1$이 참임을 증명<br>
 `결론`: $t_(n+1) = t_((n+1)-1) + 1 = t_n + 1 = n + 1$
 
+
+<br>
+<br>
+<br>
 
 # 재귀식
 ## 재귀식이란
@@ -427,12 +427,13 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |:---:|---|
 |**`주어진 재귀식`**|$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>$t_1 = 1$|
 |**`점검 (Inspection)`**|$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$|
-|**`*추정 (Estimation)`**|$t_n = \log n + 1$|
+|**`추정 (Estimation)`**|$t_n = \log n + 1$|
 |**`정당성 증명 (Proof of the correctness)`**|$n = 1$일 때: $t_1 = 1 = \log 1 + 1$|
 |**`귀납 가정 (Induction hypothesis)`**|$t_n = \log n + 1$|
 |**`귀납 단계 (Induction step)`**|$2n$을 대입하여 다음을 보여야 함:<br>$t_{2n} = \log (2n) + 1$|
 |**`결론`**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
 
+<br>
 
 **2) 예제 2**
 
@@ -440,14 +441,15 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 |:---:|---|
 |**주어진 재귀식**|$t_n = 7t_{n/2}$ (단, $n > 1,n$은 $2$의 거듭제곱)<br>$t_1 = 1$|
 |**점검 (Inspection)**|$t_2 = 7t_{2/2} = 7t_1 = 7$<br>$t_4 = 7t_{4/2} = 7t_2 = 7^2$<br>$t_8 = 7t_{8/2} = 7t_4 = 7^3$<br>$t_{16} = 7t_{16/2} = 7t_8 = 7^4$|
-|**추정 (Estimation)**|$t_n = 7^{\log n}$
-|**정당성 증명 (Proof of the correctness)**|
-$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$||**귀납 가정 (Induction hypothesis)**|$t_n = 7^{\log n}$|
+|**추정 (Estimation)**|$t_n = 7^{\log n}$|
+|**정당성 증명 (Proof of the correctness)**|$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$|
+|**귀납 가정 (Induction hypothesis)**|$t_n = 7^{\log n}$|
 |**귀납 단계 (Induction step)**|$t_{2n} = 7^{\log (2n)}$|
 |**결론 (Conclusion)**|$t_{2n} = 7t_{(2n)/2} = 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} = 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
 
+<br>
 
-**3)*명확한 후보 해(candidate solution)가 없는 경우**
+**3)명확한 후보 해(candidate solution)가 없는 경우**
 
 |구분|내용|
 |:---:|---|
@@ -456,13 +458,13 @@ $t_1 = 0$|
 |**점검 (Inspection)**|$t_2 = 2t_{2/2} + 2 - 1 = 2t_1 + 1 = 1$<br>$t_4 = 2t_{4/2} + 4 - 1 = 2t_2 + 3 = 5$<br>$t_8 = 2t_{8/2} + 8 - 1 = 2t_4 + 7 = 17$<br>$t_{16} = 2t_{16/2} + 16 - 1 = 2t_8 + 15 = 49$|
 |**추정 (Estimation)**|???|
 
-
+<br>
 
 **[ 재귀식의 종류 ]**
 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
 > $a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
 👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
-상수 계수를 갖는 동차 선형 재귀식(homogeneous linear recurrence equation with constant coefficients)<br>
+상수 계수로 갖는 동차 선형 재귀식(homogeneous linear recurrence equation with constant coefficients)<br>
 • 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
 • 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
 • $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
@@ -495,11 +497,7 @@ $t_0 = 0$, $t_1 = 1$
 동차 선형 재귀식 형태로 표현: $t_n - t_{n-1} - t_{n-2} = 0$
 
 
-**[ 예시 ]**<br>
 
-다음은 제공해주신 **슬라이드 4장**의 **정확한 번역**입니다.
-
----
 
 ### **특성 방정식을 이용한 재귀식 풀이**  
 **Solving Recurrences Using the Characteristic Equation**
