--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -137,7 +137,7 @@ $t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
 
 <br>
 
-**[ 의사코드: not in-place ]**
+**[ 의사코드: not in-place ]**<br>
 `예시 1 - mergesort`
 
 ```c
@@ -203,7 +203,7 @@ void merge (int h, int m, const keytype U[], const keytype V[], keytype S[]) {
 
 <br>
 
-**[ 의사코드: in-place ]**
+**[ 의사코드: in-place ]**<br>
 `예시 1 - Mergesort 2`
 
 ```c
@@ -293,6 +293,7 @@ void merge2(index low, index mid, index high) {
 |`10 13 12 → 10 12 13`, `22 27 20 25 → 20 22 25 27`|두 부분 배열 각각 정렬|
 |`15 22 13 27 12 10 20 25`|정렬|
 
+<br>
 
 **[ 시간 복잡도 ]**<br>
 `Partition의 시간복잡도`: 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
@@ -322,6 +323,8 @@ $A(n) = \sum_{p=1}^{n} \frac{1}{n} \left[ A(p-1) + A(n-p) \right] + (n - 1)$<br>
 
 • 근사화하면 $A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$<br>
 • 평균적으로 매우 효율적인 정렬 알고리즘
+
+<br>
 
 **[ 의사코드 ]**
 
@@ -460,17 +463,18 @@ $t_1 = 0$|
 
 <br>
 
-**[ 재귀식의 종류 ]**
+**[ 재귀식의 종류 ]**<br>
 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
 > $a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
 👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
-상수 계수로 갖는 동차 선형 재귀식(homogeneous linear recurrence equation with constant coefficients)<br>
+상수 계수로 갖는 동차 선형 재귀식<br>
 • 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
 • 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
 • $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
 
 `예시`<br>
-동차 선형 상수 계수 재귀식 (Homogeneous Linear Recurrence Equations with Constant Coefficients)<br>
+동차 선형 상수 계수 재귀식<br>
+(Homogeneous Linear Recurrence Equations with Constant Coefficients)<br>
 $7t_n - 3t_{n-1} = 0$<br>
 $6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>
 $8t_n - 4t_{n-3} = 0$
@@ -479,8 +483,8 @@ $8t_n - 4t_{n-3} = 0$
 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
 
 **[ 용어 정리 ]**
-후보해
-일반해
+후보해 (Candidate Solution): 문제를 풀기 위해 가설로 세운 해 (검증 필요)
+일반해 (General Solution): 재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태
 
 
 
@@ -506,30 +510,18 @@ $t_0 = 0$, $t_1 = 1$
 
 #### **동차 선형 재귀식 예제로부터 재귀식 풀기 (1/4)**
 
-**주어진 재귀식**
-> $t_n - 5t_{n-1} + 6t_{n-2} = 0$ for n > 1$
-$t_0 = 0, t_1 = 1$
-
-**만약 $t_n = r^n$** 이라고 가정하면,
-$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$
-
-$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$
-
-**해**
-$r = 0$, $r = 3$, $r = 2$ ()
-
-**결론적으로** $t_n = 0$, $t_n = 3^n$,$t_n = 2^n$
-
-**검증**<br>
-
-$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>
+|단계|내용|
+|:---:|---|
+|**주어진 재귀식**|$t_n - 5t_{n-1} + 6t_{n-2} = 0$ for $n > 1$<br>$t_0 = 0, t_1 = 1$|
+|**가정**|$t_n = r^n$<br>$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$<br>$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$|
+|**해**|$r = 0$, $r = 3$, $r = 2$|
+|**결론**|$t_n = 0$, $t_n = 3^n$,$t_n = 2^n$|
+|**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>
 $t_n - 5t_{n-1} + 6t_{n-2}$
-$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>
-
-$t_n = 2^n$가 해인지도 확인함
+$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
 
 **일반해 (General Solution)**  
-$t_n = 0\), \(t_n = 3^n\), \(t_n = 2^n\) 이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
+$t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
 $t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>
 $c_1 = c_2 = 0$일 경우, $t_n = 0$<br>
 
@@ -565,52 +557,16 @@ $t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 
 
 
-다음은 **"Characteristic Equation Example 2"**에 대한 **완전한 번역 정리본**입니다.
-
----
-
 # 📘 특성 방정식을 이용한 재귀식 풀이 – 예제 2
 
 ---
 
-### ✅ 예제 재귀식
-\[
-t_n - t_{n-1} - t_{n-2} = 0,\quad \text{for } n > 1,\quad t_0 = 0,\ t_1 = 1
-\]
-
----
-
-### ✅ 1. 특성 방정식 도출
-\[
-r^2 - r - 1 = 0
-\]
-
----
-
-### ✅ 2. 특성 방정식 해 구하기
-\[
-r = \frac{1 + \sqrt{5}}{2}, \quad r = \frac{1 - \sqrt{5}}{2}
-\]
-
----
-
-### ✅ 3. 일반해 구성 (Theorem B.1에 따라)
-\[
-t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n
-\]
-
----
-
-### ✅ 4. 상수 \(c_1, c_2\) 초기 조건으로 결정하기
-
-초기 조건:
-
-- \(t_0 = 0\)
-
-\[
-c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0
-\Rightarrow c_1 + c_2 = 0
-\]
+|예제 재귀식|$t_n - t_{n-1} - t_{n-2} = 0,\quad \text{for } n > 1,\quad t_0 = 0,\ t_1 = 1$|
+|특성 방정식 도출|$r^2 - r - 1 = 0$|
+|특성 방정식 해 구하기|$r = \frac{1 + \sqrt{5}}{2}, \quad r = \frac{1 - \sqrt{5}}{2}$
+|일반해 구성 (Theorem B.1에 따라)|$t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n$|
+|상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>
+$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0 \Rightarrow c_1 + c_2 = 0$
 
 - \(t_1 = 1\)
 
@@ -647,8 +603,6 @@ t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left(
 > ✅ 이 식은 피보나치 수열의 일반항과 동일합니다!
 
 
-
-아래는 이미지에 있는 내용을 원문 그대로 한국어로 번역한 것입니다:
 
 ---
 
@@ -1469,84 +1423,48 @@ T(n) \in \Theta(f(n))
 도 성립한다.  
 ※ 위 정리는 \(\Theta\)뿐만 아니라 \(O\), \(\Omega\), 소문자 \(o\) 표기에도 동일하게 적용된다.
 
----
+
 
 ### 📌 예제
 
-\[
-T(n) = T\left( \left\lfloor \frac{n}{2} \right\rfloor \right) + 1 \quad \text{(단, \( n > 1 \))}, \quad T(1) = 1
-\]
+$T(n) = T\left( \left\lfloor \frac{n}{2} \right\rfloor \right) + 1 \quad \text{(단, \( n > 1 \))}, \quad T(1) = 1$
 
 **시간 복잡도**  
-\[
-T(n) = \lg n + 1 \in \Theta(\lg n) \quad \text{(\( n \)이 2의 거듭제곱일 때)}
-\]  
+$T(n) = \lg n + 1 \in \Theta(\lg n)$ ($n$이 2의 거듭제곱일 때)$
 
 - 2의 거듭제곱 사이의 값들에 대한 결론은 없음 ❗️
 
-**\( T(n) \)이 eventually nondecreasing임을 증명하기 위한 귀납법 사용**  
-- \( n \geq 2 \)에 대해, \( 1 \leq k \leq n \)이면  
-\[
-T(k) \leq T(n)
-\]
+**귀납법으로 $T(n)$이 eventually nondecreasing임을 증명**
 
----
+$n \geq 2$에 대해, $ 1 \leq k \leq n$이면  $T(k) \leq T(n)$
 
-### 📌 예제 (계속)
-
-**귀납법으로 \( T(n) \)이 eventually nondecreasing임을 증명**
 
 - **귀납 기본 단계**  
-\[
-T(1) = 1 \\
-T(2) = T\left(\left\lfloor \frac{2}{2} \right\rfloor\right) + 1 = T(1) + 1 = 2
-\]  
-따라서  
-\[
-T(1) \leq T(2)
-\]
+$T(1) = 1$
+$T(2) = T\left(\left\lfloor \frac{2}{2} \right\rfloor\right) + 1 = T(1) + 1 = 2$ 
+$T(1) \leq T(2)$
 
-- **귀납 가정**  
-모든 \( m \leq n \)에 대해, \( k < m \)이면  
-\[
-T(k) \leq T(m)
-\]
+**귀납 가정**  
+모든 $m \leq n$에 대해, $k < m$이면 $T(k) \leq T(m)$
 
-- **귀납 단계**  
-가정에 따라 \( k < n \)이면  
-\[
-T(k) \leq T(n)
-\]
-
----
-
-### 📌 예제 (계속)
+**귀납 단계**  
+가정에 따라 $k < n$이면  $T(k) \leq T(n)$
 
 **귀납 단계 (계속)**
 
 - 보여야 할 것:  
-\[
-T(n) \leq T(n+1)
-\]
+$T(n) \leq T(n+1)$
 
 - 다음의 참인 명제 사용:  
-\[
-\left\lfloor \frac{n}{2} \right\rfloor \leq \left\lfloor \frac{n+1}{2} \right\rfloor \leq n
-\]
+$\left\lfloor \frac{n}{2} \right\rfloor \leq \left\lfloor \frac{n+1}{2} \right\rfloor \leq n$
 
 - 귀납 가정에 따라:  
-\[
-T\left(\left\lfloor \frac{n}{2} \right\rfloor\right) \leq T\left(\left\lfloor \frac{n+1}{2} \right\rfloor\right)
-\]
+$T\left(\left\lfloor \frac{n}{2} \right\rfloor\right) \leq T\left(\left\lfloor \frac{n+1}{2} \right\rfloor\right)$
 
 - 결론적으로:  
-\[
-T(n) = T\left(\left\lfloor \frac{n}{2} \right\rfloor\right) + 1 \leq T\left(\left\lfloor \frac{n+1}{2} \right\rfloor\right) + 1 = T(n+1)
-\]
+$T(n) = T\left(\left\lfloor \frac{n}{2} \right\rfloor\right) + 1 \leq T\left(\left\lfloor \frac{n+1}{2} \right\rfloor\right) + 1 = T(n+1)$
 
----
 
-이후 슬라이드도 필요하시면 이어서 번역해드릴게요!
 
 
 
