--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -506,9 +506,8 @@ $t_0 = 0$, $t_1 = 1$
 ### **특성 방정식을 이용한 재귀식 풀이**  
 **Solving Recurrences Using the Characteristic Equation**
 
----
 
-#### **동차 선형 재귀식 예제로부터 재귀식 풀기 (1/4)**
+**[ 동차 선형 재귀식 예제로부터 재귀식 풀기 ]**
 
 |단계|내용|
 |:---:|---|
@@ -516,9 +515,7 @@ $t_0 = 0$, $t_1 = 1$
 |**가정**|$t_n = r^n$<br>$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$<br>$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$|
 |**해**|$r = 0$, $r = 3$, $r = 2$|
 |**결론**|$t_n = 0$, $t_n = 3^n$,$t_n = 2^n$|
-|**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>
-$t_n - 5t_{n-1} + 6t_{n-2}$
-$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
+|**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>$t_n - 5t_{n-1} + 6t_{n-2}$<br>$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
 
 **일반해 (General Solution)**  
 $t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
@@ -557,56 +554,22 @@ $t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 
 
 
-# 📘 특성 방정식을 이용한 재귀식 풀이 – 예제 2
+**[ 특성 방정식을 이용한 재귀식 풀이 – 예제 2 ]**
 
----
-
+|단계|내용|
+|:---:|---|
 |예제 재귀식|$t_n - t_{n-1} - t_{n-2} = 0,\quad \text{for } n > 1,\quad t_0 = 0,\ t_1 = 1$|
 |특성 방정식 도출|$r^2 - r - 1 = 0$|
 |특성 방정식 해 구하기|$r = \frac{1 + \sqrt{5}}{2}, \quad r = \frac{1 - \sqrt{5}}{2}$
 |일반해 구성 (Theorem B.1에 따라)|$t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n$|
 |상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>
-$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0 \Rightarrow c_1 + c_2 = 0$
-
-- \(t_1 = 1\)
-
-\[
-c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1
-\]
-
----
-
-### ✅ 5. 식 정리 및 상수 결정
-
-\[
-\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1
-\]
-
-\[
-c_2 = -c_1 \ \text{를 대입하면:}
-\]
-
-\[
-\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1
-\Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1
-\Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}
-\]
-
----
-
-### ✅ 6. 최종 일반해 (Final General Solution)
-
-\[
-t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left( \frac{1 - \sqrt{5}}{2} \right)^n \right)
-\]
-
-> ✅ 이 식은 피보나치 수열의 일반항과 동일합니다!
+$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0 \Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
+|식 정리 및 상수 결정|$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1$<br>$c_2 = -c_1 \ \text{를 대입하면:}$<br>$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1 \Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1 \Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}$|
+|최종 일반해 (Final General Solution)|$t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left( \frac{1 - \sqrt{5}}{2} \right)^n \right)$<br>이 식은 피보나치 수열의 일반항과 동일|
 
 
 
----
-
-### ● Multiplicity (중복도)
+## Multiplicity (중복도)
 
 \[
 (r - 1)(r - 2)^3 = 0
