--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -563,7 +563,7 @@ $t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 |특성 방정식 해 구하기|$r = \frac{1 + \sqrt{5}}{2}, \quad r = \frac{1 - \sqrt{5}}{2}$
 |일반해 구성 (Theorem B.1에 따라)|$t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n$|
 |상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>
-$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0 \Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
+$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0$ <br> $\Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
 |식 정리 및 상수 결정|$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1$<br>$c_2 = -c_1 \ \text{를 대입하면:}$<br>$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1 \Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1 \Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}$|
 |최종 일반해 (Final General Solution)|$t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left( \frac{1 - \sqrt{5}}{2} \right)^n \right)$<br>이 식은 피보나치 수열의 일반항과 동일|
 
@@ -1078,11 +1078,11 @@ t_n - 2t_{n-1} = 0 \quad \Rightarrow \quad r^1 - 2 = 0
 \]
 
 
-다음은 **변수 치환을 이용한 점화식 풀이**에 대한 슬라이드 전체 번역입니다:
 
----
 
-## ● 변수 치환을 이용한 점화식 풀이 예제 1
+## 변수 치환을 이용한 점화식 풀이 
+
+**[ 예제 1 ]**
 
 \[
 T(n) = T\left(\frac{n}{2}\right) + 1 \quad \text{(단, } n > 1, \text{ n은 2의 거듭제곱)}, \quad T(1) = 1
@@ -1100,9 +1100,6 @@ n = 2^k \Rightarrow k = \log_2 n
 T(2^k) = T\left(\frac{2^k}{2}\right) + 1 = T(2^{k-1}) + 1
 \]
 
----
-
-## ● 예제 1 (계속)
 
 - \( t_k = T(2^k) \)로 두면,
 
@@ -1133,9 +1130,9 @@ T(n) = c_1 + c_2 \log_2 n
 T(n) = 1 + \log_2 n
 \]
 
----
 
-## ● 변수 치환을 이용한 점화식 풀이 예제 2
+
+**[ 예제 2 ]**
 
 \[
 T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0
@@ -1149,9 +1146,6 @@ T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2, \quad T(1) = 0
 T(2^k) = 7T(2^{k-1}) + 18(2^{k-1})^2
 \]
 
----
-
-## ● 예제 2 (계속)
 
 \[
 t_k = 7t_{k-1} + 18(2^{k-1})^2 = 7t_{k-1} + 18 \cdot 4^{k-1}
@@ -1167,9 +1161,8 @@ t_k = 7t_{k-1} + 18(2^{k-1})^2 = 7t_{k-1} + 18 \cdot 4^{k-1}
 t_k = c_1 \cdot 7^k + c_2 \cdot 4^k
 \]
 
----
 
-## ● 예제 2 (계속): 원래 점화식의 일반해 구하기
+원래 점화식의 일반해 구하기
 
 - \( T(2^k) = t_k = c_1 \cdot 7^k + c_2 \cdot 4^k \)
 
@@ -1186,14 +1179,10 @@ T(n) = 6n^{\log_2 7} - 6n^2 \approx 6n^{2.81} - 6n^2
 \]
 
 
-좋아요! 아래는 **방금 보내주신 슬라이드 4개**의 정확한 번역입니다.  
-(주제: **대입법(Substitution)을 이용한 재귀식 풀이**)
 
----
+## Substitution(대입법)을 이용한 재귀식 풀이 
 
-### ✅ 슬라이드 1:  
-**Substitution을 이용한 재귀식 풀이 예제 1**
-
+**[ 예제 1 ]**
 \[
 t_n = t_{n-1} + n \quad \text{(for } n > 1) \\
 t_1 = 1
@@ -1211,10 +1200,7 @@ t_1 &= 1
 \end{align*}
 \]
 
----
-
-### ✅ 슬라이드 2:  
-**Substitution을 이용한 재귀식 풀이 예제 1 (계속)**  
+*  
 - 각 등식을 대입해서 \(t_n\)을 구함:
 
 \[
@@ -1229,10 +1215,8 @@ t_n &= t_{n-1} + n \\
 \end{align*}
 \]
 
----
 
-### ✅ 슬라이드 3:  
-**Substitution을 이용한 재귀식 풀이 예제 1 (다른 형태)**
+**[ 예제 2 ]**
 
 \[
 t_n = t_{n-1} + \frac{2}{n} \quad (n > 1), \quad t_1 = 0
@@ -1251,10 +1235,7 @@ t_1 &= 0
 \end{align*}
 \]
 
----
 
-### ✅ 슬라이드 4:  
-**Substitution을 이용한 재귀식 풀이 예제 1 (계속)**  
 - 각 등식을 대입해서 \(t_n\) 구하기:
 
 \[
@@ -1270,11 +1251,9 @@ t_n &= t_{n-1} + \frac{2}{n} \\
 \]
 
 
-물론이죠! 아래는 방금 올려주신 슬라이드 4장의 **한국어 번역본**입니다.
 
----
-
-### 🟦 슬라이드 1: n이 어떤 양의 상수 b의 거듭제곱일 때의 결과를 일반적인 n으로 확장하기
+## 시간 복잡도
+n이 어떤 양의 상수 b의 거듭제곱일 때의 결과를 일반적인 n으로 확장하기
 
 **• 네 가지 시간 복잡도 함수**
 
@@ -1290,9 +1269,6 @@ t_n &= t_{n-1} + \frac{2}{n} \\
 4. (d) **궁극적으로 비감소하는 함수 (Eventually Nondecreasing)**  
    - 일정 시점 이후로는 증가 또는 유지
 
----
-
-### 🟦 슬라이드 2: 증가하는 시간 복잡도
 
 **• 증가하는 시간 복잡도**
 
@@ -1304,9 +1280,7 @@ t_n &= t_{n-1} + \frac{2}{n} \\
 - **예시 함수들**  
   - log₂n, n, n log n, n², 2ⁿ 등 (단, n ≥ 0일 때)
 
----
 
-### 🟦 슬라이드 3: 비감소 시간 복잡도
 
 **• 비감소 시간 복잡도**
 
@@ -1318,11 +1292,9 @@ t_n &= t_{n-1} + \frac{2}{n} \\
 - **설명**  
   대부분의 시간 복잡도 함수는 비감소 함수이다.
 
----
 
-### 🟦 슬라이드 4: 비비감소 함수가 아님 (Not Nondecreasing)
 
-**• '비비감소가 아님'**
+**• '비비감소가 아님(Not Nondecreasing)'**
 
 - 예시: n이 2의 거듭제곱일 때의 f(n)
   - 예: 2³ = 8, 2⁴ = 16 사이에서 결론 불가
@@ -1334,12 +1306,7 @@ t_n &= t_{n-1} + \frac{2}{n} \\
   비감소가 아닌 함수는 일반적인 시간 복잡도를 **판단할 수 없음**
 
 
-
-물론이죠! 방금 보낸 **슬라이드 6장**의 내용을 아래와 같이 **그대로 한국어로 번역**해드렸습니다:
-
----
-
-### 📌 'Eventually Not Nondecreasing’ (결국 증가하지 않음이 아닌 함수)
+'Eventually Not Nondecreasing’ (결국 증가하지 않음이 아닌 함수)
 
 **정의**  
 복잡도 함수 \( f(n) \)은 어떤 시점 이후로 절대 작아지지 않으면 **결국 증가하지 않음(eventually nondecreasing)**이라 부른다. 즉, 어떤 \( N \)이 존재하여  
