--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -465,12 +465,6 @@ $t_1 = 0$|
 
 **[ 재귀식의 종류 ]**<br>
 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
-> $a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
-👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
-상수 계수로 갖는 동차 선형 재귀식<br>
-• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
-• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
-• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
 
 `예시`<br>
 동차 선형 상수 계수 재귀식<br>
@@ -482,9 +476,63 @@ $8t_n - 4t_{n-3} = 0$
 
 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
 
+비동차 선형 점화식(Nonhomogeneous Linear Recurrences)
+
+#### ✅ 정의 (Definition)
+
+다음 형태의 점화식:
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$
+
+여기서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수일 때, 이러한 식은 **상수 계수를 갖는 비동차 선형 점화식(nonhomogeneous linear recurrence equation with constant coefficients)** 이라고 부른다.
+
+
+- **영 함수 (Zero function)**: $f(n) = 0$
+- 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
+- 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함:
+
+$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
+
+> $b4: 상수, $p(n)$: $n $에 대한 다항식
+
+
+
 **[ 용어 정리 ]**
 후보해 (Candidate Solution): 문제를 풀기 위해 가설로 세운 해 (검증 필요)
 일반해 (General Solution): 재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태
+
+
+**[ 정리 ]**
+
+|정리 B.1 (Theorem B.1)|
+
+$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
+👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
+상수 계수로 갖는 동차 선형 재귀식<br>
+• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
+• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
+• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
+
+|정리 B.2 (Theorem B.2)|
+|---|
+|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>
+• $t_n = r^n, \quad t_n = n r^n, \quad t_n = n^2 r^n, \quad t_n = n^3 r^n, \quad \dots, \quad t_n = n^{m-1} r^n
+$ 는 모두 점화식의 해가 됨<br>
+• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
+
+
+|정리 B.3 (Theorem B.3)|
+|---|
+|다음 형태의 비동차 선형 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
+
+은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다:
+$(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$
+
+여기서 \( d \)는 \( p(n) \)의 차수(Degree)이다. 이 특성 방정식은 두 부분으로 이루어진다:
+
+1. 해당 동차 점화식의 특성 방정식
+2. 비동차 항으로부터 유도된 항
+
+만약 오른쪽 항에 \( b^n p(n) \) 같은 항이 둘 이상 있다면, 각각의 항이 특성 방정식에 하나의 항을 더하게 된다.
 
 
 
@@ -564,245 +612,57 @@ $t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 |일반해 구성 (Theorem B.1에 따라)|$t_n = c_1 \left( \frac{1 + \sqrt{5}}{2} \right)^n + c_2 \left( \frac{1 - \sqrt{5}}{2} \right)^n$|
 |상수 \(c_1, c_2\) 초기 조건으로 결정|초기 조건: $t_0 = 0$<br>
 $c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right)^0 + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right)^0 = 1 \cdot c_1 + 1 \cdot c_2 = 0$ <br> $\Rightarrow c_1 + c_2 = 0$<br>$t_1 = 1$<br>$c_1 \cdot \left( \frac{1 + \sqrt{5}}{2} \right) + c_2 \cdot \left( \frac{1 - \sqrt{5}}{2} \right) = 1$|
-|식 정리 및 상수 결정|$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1$<br>$c_2 = -c_1 \ \text{를 대입하면:}$<br>$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1 \Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1 \Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}$|
+|식 정리 및 상수 결정|$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 + \left( \frac{1 - \sqrt{5}}{2} \right) c_2 = 1$<br>$c_2 = -c_1$ 를 대입하면<br>$\left( \frac{1 + \sqrt{5}}{2} \right) c_1 - \left( \frac{1 - \sqrt{5}}{2} \right) c_1 = 1$<br> $\Rightarrow \left( \frac{\sqrt{5}}{1} \right) c_1 = 1$<br>$\Rightarrow c_1 = \frac{1}{\sqrt{5}},\quad c_2 = -\frac{1}{\sqrt{5}}$|
 |최종 일반해 (Final General Solution)|$t_n = \frac{1}{\sqrt{5}} \left( \left( \frac{1 + \sqrt{5}}{2} \right)^n - \left( \frac{1 - \sqrt{5}}{2} \right)^n \right)$<br>이 식은 피보나치 수열의 일반항과 동일|
 
 
+<br>
+<br>
 
 ## Multiplicity (중복도)
 
-\[
-(r - 1)(r - 2)^3 = 0
-\]
+**[ 정의 ]**<br>
+> 특성 방정식에서 어떤 근이 몇 번 중복되는지를 표현한 것<br>
+$(r - 1)(r - 2)^3 = 0$: $r = 2$가 세 번 중복되므로 중복도는 3
 
-> 중복도(Multiplicity)는 특성 방정식에서 어떤 근이 몇 번 중복되는지를 나타냅니다. 위 예시에서는 \( r = 2 \)가 세 번 중복되므로 중복도는 3입니다.
 
----
 
-### ● 정리 B.2 (Theorem B.2)
+**[ 예제1 ]** 
 
-> \( r \)이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 \( m \)을 가진 근이라면,
+중복도를 가진 특성 방정식을 사용한 점화식 풀이
 
-\[
-t_n = r^n, \quad t_n = n r^n, \quad t_n = n^2 r^n, \quad t_n = n^3 r^n, \quad \dots, \quad t_n = n^{m-1} r^n
-\]
+|단계|내용|
+|:---:|---|
+|특성 방정식 도출하기|점화식: $t_n - 7t_{n-1} + 15t_{n-2} - 9t_{n-3} = 0 \quad (n > 2)$<br>$t_0 = 0, \quad t_1 = 1, \quad t_2 = 2$<ㅠ특성 방정식: $r^3 - 7r^2 + 15r - 9 = 0$|
+|특성 방정식 풀기|$r^3 - 7r^2 + 15r - 9 = (r - 1)(r - 3)^2 = 0$<br>중복도: $r = 1$(단일근), $r = 3$(중복도 2의 중근)<br>해의 형태: $t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n$|
+|정리 B.1에 따라 일반해 구하기|$t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n$|
+|초기 조건으로 상수 $c_1, c_2, c_3$구하기|초기 조건:$t_0 = 0 = c_1 \cdot 1^0 + c_2 \cdot 3^0 + c_3 \cdot (0) \cdot (3^0)$<br>$t_1 = 1 = c_1 \cdot 1^1 + c_2 \cdot 3^1 + c_3 \cdot (1) \cdot (3^1)$<br>$t_2 = 2 = c_1 \cdot 1^2 + c_2 \cdot 3^2 + c_3 \cdot (2) \cdot (3^2)$|
+|식 정리|$c_1 + c_2 = 0$<br>$c_1 + 3c_2 + 3c_3 = 1$<br>$c_1 + 9c_2 + 18c_3 = 2$|
+|해|$c_1 = -1, \quad c_2 = 1, \quad c_3 = -\frac{1}{3}$|
+|최종 일반해|$t_n = (-1)(1^n) + (1)(3^n) + \left(-\frac{1}{3}\right)(n \cdot 3^n)$<br>$= -1 + 3^n - n \cdot 3^n \cdot \frac{1}{3} = -1 + 3^n - n \cdot 3^{n-1}$
 
-는 모두 점화식의 해가 됩니다. 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함됩니다.
 
----
+**[ 예제2: 중복도를 가진 특성 방정식을 사용한 점화식 풀이 ]**
 
-### ● 예제1: 중복도를 가진 특성 방정식을 사용한 점화식 풀이
+|단계|내용|
+|:---:|---|
+|점화식|$t_n - 5t_{n-1} + 7t_{n-2} - 3t_{n-3} = 0 \quad \text{for } n > 2$<br>$t_0 = 1, \quad t_1 = 2, \quad t_2 = 3$|
+|특성 방정식 도출하기|$t_n - 5t_{n-1} + 7t_{n-2} - 3t_{n-3} = 0$<br>$\Rightarrow r^3 - 5r^2 + 7r - 3 = 0$|
+|특성 방정식 풀기|$r^3 - 5r^2 + 7r - 3 = (r - 3)(r - 1)^2 = 0$<br>중복도: $r = 3$(단일근), $r = 1$(중복도 2의 중근)|
+|정리 B.1에 따라 일반해 구하기|$t_n = c_1 \cdot 3^n + c_2 \cdot 1^n + c_3 \cdot n \cdot 1^n$|
+|초기 조건으로 상수 $c_1, c_2, c_3$ 구하기|초기 조건: $t_0 = 1 = c_1 \cdot 3^0 + c_2 \cdot 1^0 + c_3 \cdot 0 \cdot 1^0$<br>$t_1 = 2 = c_1 \cdot 3^1 + c_2 \cdot 1^1 + c_3 \cdot 1 \cdot 1^1$<br>$t_2 = 3 = c_1 \cdot 3^2 + c_2 \cdot 1^2 + c_3 \cdot 2 \cdot 1^2$|
+|위 식 정리|$c_1 + c_2 = 1$<br>$3c_1 + c_2 + c_3 = 2$<br>$9c_1 + c_2 + 2c_3 = 3$|
+|해|$c_1 = 0, \quad c_2 = 1, \quad c_3 = 1$|
+|최종 일반해|$t_n = 0 \cdot 3^n + 1 \cdot 1^n + 1 \cdot n \cdot 1^n = 1 + n$|
 
-**1. 특성 방정식 도출하기**
 
-점화식:
 
-\[
-t_n - 7t_{n-1} + 15t_{n-2} - 9t_{n-3} = 0 \quad (n > 2)
-\]
-\[
-t_0 = 0, \quad t_1 = 1, \quad t_2 = 2
-\]
 
-특성 방정식:
 
-\[
-r^3 - 7r^2 + 15r - 9 = 0
-\]
 
-**2. 특성 방정식 풀기**
 
-\[
-r^3 - 7r^2 + 15r - 9 = (r - 1)(r - 3)^2 = 0
-\]
+## 비동차 선형 점화식 예제
 
-중복도:
-- \( r = 1 \): 단일근
-- \( r = 3 \): 중복도 2의 중근
-
-따라서 해의 형태:
-
-\[
-t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n
-\]
-
----
-
-### ● 예제1 (계속): 일반해 구하고 상수 결정하기
-
-**3. 정리 B.1에 따라 일반해 구하기**
-
-\[
-t_n = c_1 \cdot 1^n + c_2 \cdot 3^n + c_3 \cdot n \cdot 3^n
-\]
-
-**4. 초기 조건으로 상수 \( c_1, c_2, c_3 \) 구하기**
-
-초기 조건:
-
-\[
-t_0 = 0 = c_1 \cdot 1^0 + c_2 \cdot 3^0 + c_3 \cdot (0) \cdot (3^0)
-\]
-\[
-t_1 = 1 = c_1 \cdot 1^1 + c_2 \cdot 3^1 + c_3 \cdot (1) \cdot (3^1)
-\]
-\[
-t_2 = 2 = c_1 \cdot 1^2 + c_2 \cdot 3^2 + c_3 \cdot (2) \cdot (3^2)
-\]
-
-식 정리:
-
-\[
-c_1 + c_2 = 0
-\]
-\[
-c_1 + 3c_2 + 3c_3 = 1
-\]
-\[
-c_1 + 9c_2 + 18c_3 = 2
-\]
-
-해:
-
-\[
-c_1 = -1, \quad c_2 = 1, \quad c_3 = -\frac{1}{3}
-\]
-
-최종 일반해:
-
-\[
-t_n = (-1)(1^n) + (1)(3^n) + \left(-\frac{1}{3}\right)(n \cdot 3^n)
-\]
-\[
-= -1 + 3^n - n \cdot 3^n \cdot \frac{1}{3} = -1 + 3^n - n \cdot 3^{n-1}
-\]
-
----
-
-필요하다면 수식 정리된 버전이나 추가 예제도 도와줄게요!
-
-
-아래는 두 번째 예제 이미지의 내용을 원문 그대로 한국어로 번역한 것입니다:
-
----
-
-### ● 예제2: 중복도를 가진 특성 방정식을 사용한 점화식 풀이
-
-점화식:
-
-\[
-t_n - 5t_{n-1} + 7t_{n-2} - 3t_{n-3} = 0 \quad \text{for } n > 2
-\]
-\[
-t_0 = 1, \quad t_1 = 2, \quad t_2 = 3
-\]
-
-**1. 특성 방정식 도출하기**
-
-\[
-t_n - 5t_{n-1} + 7t_{n-2} - 3t_{n-3} = 0
-\]
-\[
-\Rightarrow r^3 - 5r^2 + 7r - 3 = 0
-\]
-
-**2. 특성 방정식 풀기**
-
-\[
-r^3 - 5r^2 + 7r - 3 = (r - 3)(r - 1)^2 = 0
-\]
-
-→ 중복도:
-- \( r = 3 \): 단일근
-- \( r = 1 \): 중복도 2의 중근
-
----
-
-### ● 예제2 (계속): 일반해 구하고 상수 결정하기
-
-**3. 정리 B.1에 따라 일반해 구하기**
-
-\[
-t_n = c_1 \cdot 3^n + c_2 \cdot 1^n + c_3 \cdot n \cdot 1^n
-\]
-
-**4. 초기 조건으로 상수 \( c_1, c_2, c_3 \) 구하기**
-
-초기 조건:
-
-\[
-t_0 = 1 = c_1 \cdot 3^0 + c_2 \cdot 1^0 + c_3 \cdot 0 \cdot 1^0
-\]
-\[
-t_1 = 2 = c_1 \cdot 3^1 + c_2 \cdot 1^1 + c_3 \cdot 1 \cdot 1^1
-\]
-\[
-t_2 = 3 = c_1 \cdot 3^2 + c_2 \cdot 1^2 + c_3 \cdot 2 \cdot 1^2
-\]
-
-→ 위 식 정리:
-
-\[
-c_1 + c_2 = 1
-\]
-\[
-3c_1 + c_2 + c_3 = 2
-\]
-\[
-9c_1 + c_2 + 2c_3 = 3
-\]
-
-→ 해:
-
-\[
-c_1 = 0, \quad c_2 = 1, \quad c_3 = 1
-\]
-
----
-
-### ● 최종 일반해:
-
-\[
-t_n = 0 \cdot 3^n + 1 \cdot 1^n + 1 \cdot n \cdot 1^n = 1 + n
-\]
-
-
-
-아래는 이미지 속 **비동차 선형 점화식(Nonhomogeneous Linear Recurrences)** 에 대한 내용을 정확히 한국어로 번역한 것입니다.
-
----
-
-### ● 비동차 선형 점화식(Nonhomogeneous Linear Recurrences)
-
-#### ✅ 정의 (Definition)
-
-다음 형태의 점화식:
-
-\[
-a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)
-\]
-
-여기서 \( k \)와 \( a_i \)들은 상수이고 \( f(n) \)은 0이 아닌 어떤 함수일 때, 이러한 식은 **상수 계수를 갖는 비동차 선형 점화식(nonhomogeneous linear recurrence equation with constant coefficients)** 이라고 부른다.
-
----
-
-- **영 함수 (Zero function)**: \( f(n) = 0 \)
-- 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
-- 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함:
-
-\[
-a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)
-\]
-
-> \( b \): 상수, \( p(n) \): \( n \)에 대한 다항식
-
----
-
-### ● 비동차 선형 점화식 예제
-
-\[
-t_n - 3t_{n-1} = 4^n \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 1
-\]
 
 \[
 t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 8n + 7
@@ -810,23 +670,15 @@ t_n - 3t_{n-1} = 4^n (8n + 7) \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) =
 
 ---
 
-### ● 비동차 점화식 예제 1 풀이
+**[ 예제 1 ]**
 
-\[
-t_n - 3t_{n-1} = 4^n \quad (n > 1), \quad t_0 = 0, \quad t_1 = 4
-\]
+$t_n - 3t_{n-1} = 4^n \quad \Rightarrow \quad k = 1, \, b = 4, \, p(n) = 1$
 
-- 점화식에서 \( n \)을 \( n - 1 \)로 치환:
+$t_n - 3t_{n-1} = 4^n \quad (n > 1), \quad t_0 = 0, \quad t_1 = 4$
 
-\[
-t_{n-1} - 3t_{n-2} = 4^{n-1}
-\]
+- 점화식에서 $n$을 $n - 1$로 치환: $t_{n-1} - 3t_{n-2} = 4^{n-1}$
 
-- 식을 4로 나눔:
-
-\[
-\frac{t_n}{4} - \frac{3t_{n-1}}{4} = 4^{n-1}
-\]
+- 식을 4로 나눔: $\frac{t_n}{4} - \frac{3t_{n-1}}{4} = 4^{n-1}$
 
 ---
 
@@ -881,28 +733,7 @@ t_n = c_1 \cdot 3^n + c_2 \cdot 4^n
 
 ---
 
-### ● 정리 B.3 (Theorem B.3)
 
-다음 형태의 비동차 선형 점화식:
-
-\[
-a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)
-\]
-
-은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다:
-
-\[
-(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0
-\]
-
-여기서 \( d \)는 \( p(n) \)의 차수(Degree)이다. 이 특성 방정식은 두 부분으로 이루어진다:
-
-1. 해당 동차 점화식의 특성 방정식
-2. 비동차 항으로부터 유도된 항
-
-만약 오른쪽 항에 \( b^n p(n) \) 같은 항이 둘 이상 있다면, 각각의 항이 특성 방정식에 하나의 항을 더하게 된다.
-
----
 
 ### ● 다항식 \( p(n) \)의 차수
 
