--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -296,7 +296,7 @@ void merge2(index low, index mid, index high) {
 <br>
 
 **[ 시간 복잡도 ]**<br>
-`Partition의 시간복잡도`: 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
+`Partition의 시간복잡도` 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
 
 `최악의 경우 시간 복잡도`<br>
 피벗이 항상 가장 작거나, 가장 큰 값일 경우<br>
@@ -304,8 +304,8 @@ void merge2(index low, index mid, index high) {
 • 왼쪽 서브배열(0개), 오른쪽 서브배열(n-1개)
 
 • $W(n) = T(0) + T(n-1) + (n-1)$<br>
-$T(0)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간<br>
-$T(n)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)<br>
+$W(n)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간<br>
+$T(0)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)<br>
 $T(n-1)$: 오른쪽 배열 정렬 시간 (피벗 제외 나머지 모두)<br>
 $n-1$: 파티션 비용
 
@@ -378,9 +378,10 @@ int fact(int n) {
 ```
 
 
+<br>
 
 **[ 팩토리얼 알고리즘의 효율성 ]**<br>
-**1) 곱셈 횟수를 재귀식(recurrence equation) 으로 표현**
+**1) 곱셈 횟수를 재귀식(recurrence equation) 으로 표현**<br>
 `재귀 방정식: 재현식`
 > $t_n = t_(n-1) + 1$<br>
 • $t_n$: 재귀호출 시 곱셈 횟수<br>
@@ -391,11 +392,11 @@ int fact(int n) {
 **n이 클 때의 $t_n$ 계산 예시**<br>
 • `t₁ = t₀ + 1 = 0 + 1 = 1`<br>
 • `t₂ = t₁ + 1 = 1 + 1 = 2`<br>
-• `t₃ = t₂ + 1 = 2 + 1 = 3`
-결론: `tₙ`을 `t₀`부터 반복 계산하는 건 비효율적이다 → 
+• `t₃ = t₂ + 1 = 2 + 1 = 3`<br>
+결론: `tₙ`을 `t₀`부터 반복 계산하는 건 비효율적이다 
 
 <br>
-**2) 곱셈 횟수를 후보 해(candidate solution) 를 통해 구하기**
+**2) 곱셈 횟수를 후보 해(candidate solution) 를 통해 구하기**<br>
 • $t_n$에 대한 명시적 표현(해)을 얻기: $t_n = t_(n-1) + 1$<br>
 👉 귀납법으로 해를 찾는 것은 불가능하지만, 후보 해가 맞는지를 확인하는 데는 귀납법을 사용할 수 있음<br>
 • 초반 몇 개 값을 확인
@@ -423,7 +424,7 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 ## 재귀식이란
 
 
-**[ 재귀식 예시 ]**<br>
+**[ 재귀식 해 구하기 예시 ]**<br>
 **1) 예제 1**<br>
 
 |구분|내용|
@@ -464,7 +465,7 @@ $t_1 = 0$|
 <br>
 
 **[ 재귀식의 종류 ]**<br>
-선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
+> 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
 
 `예시`<br>
 동차 선형 상수 계수 재귀식<br>
@@ -474,29 +475,21 @@ $6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>
 $8t_n - 4t_{n-3} = 0$
 
 
-비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
+> 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
 
 비동차 선형 점화식(Nonhomogeneous Linear Recurrences)
 
-#### ✅ 정의 (Definition)
 
-다음 형태의 점화식:
-$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$
-
-여기서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수일 때, 이러한 식은 **상수 계수를 갖는 비동차 선형 점화식(nonhomogeneous linear recurrence equation with constant coefficients)** 이라고 부른다.
-
-
-- **영 함수 (Zero function)**: $f(n) = 0$
-- 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
-- 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함:
-
-$a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
-
-> $b4: 상수, $p(n)$: $n $에 대한 다항식
+다음 형태의 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = f(n)$
+• 여기서 $k$와 $a_i$들은 상수이고 $f(n)$은 0이 아닌 어떤 함수일 때, 이러한 식은 **상수 계수를 갖는 비동차 선형 점화식(nonhomogeneous linear recurrence equation with constant coefficients)** 이라고 부른다.
+• **영 함수 (Zero function)**: $f(n) = 0$
+• 비동차 점화식을 푸는 일반적인 방법은 **알려져 있지 않음**
+• 그러나 **자주 나오는 특수한 경우**에 대해 방법이 존재함: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
+•  $b4: 상수, $p(n)$: $n $에 대한 다항식
 
 
 
-**[ 용어 정리 ]**
+**[ 용어 정리 ]**<br>
 후보해 (Candidate Solution): 문제를 풀기 위해 가설로 세운 해 (검증 필요)
 일반해 (General Solution): 재귀식 전체를 만족하는 해, 상수 포함해서 모든 해를 나타내는 형태
 
@@ -504,99 +497,22 @@ $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
 **[ 정리 ]**
 
 |정리 B.1 (Theorem B.1)|
-
-$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
+|---|
+|$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
 👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
 상수 계수로 갖는 동차 선형 재귀식<br>
 • 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
 • 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
-• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
+• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$|
 
 |정리 B.2 (Theorem B.2)|
 |---|
-|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>
-• $t_n = r^n, \quad t_n = n r^n, \quad t_n = n^2 r^n, \quad t_n = n^3 r^n, \quad \dots, \quad t_n = n^{m-1} r^n
-$ 는 모두 점화식의 해가 됨<br>
-• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
+|• $r$이 상수 계수를 가진 동차 선형 점화식의 특성 방정식의 중복도 $m$을 가진 근이라면,<br>• $t_n = r^n, \quad t_n = n r^n, \quad t_n = n^2 r^n, \quad t_n = n^3 r^n, \quad \dots, \quad t_n = n^{m-1} r^n$ 는 모두 점화식의 해가 됨<br>• 그러므로 이러한 해 각각은 점화식의 일반해(정리 B.1에서 제시됨)에 포함|
 
 
 |정리 B.3 (Theorem B.3)|
 |---|
-|다음 형태의 비동차 선형 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$
-
-은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다:
-$(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$
-
-여기서 \( d \)는 \( p(n) \)의 차수(Degree)이다. 이 특성 방정식은 두 부분으로 이루어진다:
-
-1. 해당 동차 점화식의 특성 방정식
-2. 비동차 항으로부터 유도된 항
-
-만약 오른쪽 항에 \( b^n p(n) \) 같은 항이 둘 이상 있다면, 각각의 항이 특성 방정식에 하나의 항을 더하게 된다.
+|다음 형태의 비동차 선형 점화식: $a_0 t_n + a_1 t_{n-1} + \cdots + a_k t_{n-k} = b^n p(n)$은 다음과 같은 특성 방정식을 갖는 동차 선형 점화식으로 변환할 수 있다: $(a_0 r^k + a_1 r^{k-1} + \cdots + a_k)(r - b)^{d+1} = 0$<br>여기서 \( d \)는 \( p(n) \)의 차수(Degree)<br>이 특성 방정식은 두 부분으로 이루어진다(해당 동차 점화식의 특성 방정식, 비동차 항으로부터 유도된 항)<br>만약 오른쪽 항에 \( b^n p(n) \) 같은 항이 둘 이상 있다면, 각각의 항이 특성 방정식에 하나의 항을 더하게 된다|
 
 
-
-## 특성 방정식을 이용한 재귀식 풀이 
-(Solving Recurrences Using the Characteristic Equation)
-
-
-**[ 예시 ]**<br>
-
-피보나치 수열의 재귀식 (Fibonacci sequence recurrence equation)
-$t_n = t_{n-1} = t_{n-2}$<br>
-$t_0 = 0$, $t_1 = 1$
-
-동차 선형 재귀식 형태로 표현: $t_n - t_{n-1} - t_{n-2} = 0$
-
-
-
-
-### **특성 방정식을 이용한 재귀식 풀이**  
-**Solving Recurrences Using the Characteristic Equation**
-
-
-**[ 동차 선형 재귀식 예제로부터 재귀식 풀기 ]**
-
-|단계|내용|
-|:---:|---|
-|**주어진 재귀식**|$t_n - 5t_{n-1} + 6t_{n-2} = 0$ for $n > 1$<br>$t_0 = 0, t_1 = 1$|
-|**가정**|$t_n = r^n$<br>$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$<br>$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$|
-|**해**|$r = 0$, $r = 3$, $r = 2$|
-|**결론**|$t_n = 0$, $t_n = 3^n$,$t_n = 2^n$|
-|**검증**|$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>$t_n - 5t_{n-1} + 6t_{n-2}$<br>$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>$t_n = 2^n$가 해인지도 확인함|
-
-**일반해 (General Solution)**  
-$t_n = 0$, $t_n = 3^n$, $t_n = 2^n$이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
-$t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>
-$c_1 = c_2 = 0$일 경우, $t_n = 0$<br>
-
-일반해를 완성하려면 **초기 조건을 대입하여 $c_1, c_2$** 를 결정<br>
-
-**초기 조건** $t_0 = 0$,$t_1 = 1$
-
-**식 정리**:  
-$t_0 = c_1 3^0 + c_2 2^0 = c_1 + c_2 = 0$
-$t_1 = c_1 3^1 + c_2 2^1 = 3c_1 + 2c_2 = 1$
-
-**정리 (Simplifying)**:
-$c_1 + c_2 = 0$
-$3c_1 + 2c_2 = 1$
-
-
-$c_1$, $c_2$를 구해서 일반해를 완성하기 위해 **초기 조건을 사용**
-
-결론적으로:$c_1 = 1$, $c_2 = -1$
-
-$t_n = 1 \cdot (3^n) - 1 \cdot (2^n) = 3^n - 2^n$
-
-
-다른 초기 조건 사용 시<br>
-$t_0 = 1,\quad t_1 = 2$<br>
-$t_0 = c_1 3^0 + c_2 2^0 = 1$<br>
-$t_1 = c_1 3^1 + c_2 2^1 = 2$<br>
-$c_1 + c_2 = 1$<br>
-$3c_1 + 2c_2 = 2$<br>
-$c_1 = 0,\quad c_2 = 1$<br>
-
-$t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 
