--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -498,12 +498,7 @@ $8t_n - 4t_{n-3} = 0$
 
 |정리 B.1 (Theorem B.1)|
 |---|
-|$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
-👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
-상수 계수로 갖는 동차 선형 재귀식<br>
-• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
-• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
-• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$|
+|$a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를 상수 계수로 갖는 동차 선형 재귀식<br>• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$|
 
 |정리 B.2 (Theorem B.2)|
 |---|
